<resources>
    <string name="app_name">FindApp</string>
    <string name="buttonLoginLoginUserAdmin">Estudiante</string>
    <string name="buttonLoginAdminDos">Administrador</string>
    <string name="buttonLoginUser">Estudiante</string>
    <string name="buttonLoginAdmin">Administrador</string>
    <string name="buttonRegistroUser">Registro Estudiante</string>
    <string name="crearCuentaTXT">Crear una cuenta</string>
    <string name="nombreEditText">Nombres</string>
    <string name="correoEditText">Correo electrónico</string>
    <string name="contraseniaEditText">Contraseña</string>
    <string name="confirmarContraseniaEditText">Confirmar contraseña</string>
    <string name="buttonRegistrarUsuario">Registrar</string>
    <string name="tengoUnaCuentaTXT">Tengo una cuenta</string>
    <string name="crearCuentaUserTXT">Crear una cuenta</string>
    <string name="nombreEditTextUser">Nombres</string>
    <string name="correoEditTextUser">Correo electrónico</string>
    <string name="contraseniaEditTextUser">Contraseña</string>
    <string name="confirmarContraseniaEditTextUser">Confirmar contraseña</string>
    <string name="buttonRegistrarUsuarioUser">Registrar</string>
    <string name="tengoUnaCuentaTXTUser">Tengo una cuenta</string>
    <string name="iniciarSesionTXT">Iniciar Sesión</string>
    <string name="correoLogin">Correo</string>
    <string name="passLogin">Contraseña</string>
    <string name="btnLogeo">Ingresar</string>
    <string name="usuarioNuevoTXt">¿No tienes una cuenta?. Regístrate</string>
    <string name="iniciarSesionTXTUser">Iniciar Sesión</string>
    <string name="correoLoginUser">Correo</string>
    <string name="passLoginUser">Contraseña</string>
    <string name="btnLogeoUser">Ingresar</string>
    <string name="usuarioNuevoTXTUser">¿No tienes una cuenta?. Regístrate</string>
    <string name="buttonCerrarSesion">Salir</string>
    <string name="bienvenidoPrincipal">Bienvenido(a)</string>
    <string name="uidPrincipal"> -- </string>
    <string name="idObjetoAdd"> -- </string>
    <string name="nombresPrincipal"> -- </string>
    <string name="correoPrincipal"> -- </string>
    <string name="estadoCuentaPrincipal">No Verificado</string>
    <string name="buttonAgregarObjeto">Agregar</string>
    <string name="buttonObjetos">Objetos</string>
    <string name="buttonPerfilUsuario">Perfil</string>
    <string name="buttonConfiguracion">Ajustes</string>
    <string name="buttonAcercaDe">Acerca de</string>
    <string name="buttonCerrarSesionUser">Salir</string>
    <string name="bienvenidoPrincipalUser">Bienvenido(a)</string>
    <string name="uidPrincipalUser"> -- </string>
    <string name="nombresPrincipalUser"> -- </string>
    <string name="correoPrincipalUser"> -- </string>
    <string name="estadoCuentaPrincipalUser">No Verificado</string>
    <string name="buttonAgregarObjet">Mis notas</string>
    <string name="buttonObjetosUser">Objetos</string>
    <string name="buttonPerfilUsuarioUser">Perfil</string>
    <string name="buttonConfiguracionUser">Ajustes</string>
    <string name="buttonAcercaDeUser">Acerca de</string>
    <string name="actualizarpassUser">Actualizar password</string>
    <string name="listarNotasUser">Mis Notas</string>
    <string name="importantesUser">Importantes</string>
    <string name="agregarNotasUser">Agregar</string>
    <string name="agregarNotasUserMenu">Agregar</string>
    <string name="calendarMenuItemUser">Calendar</string>
    <string name="buscarObjetosMenuUser">Buscar Contactos</string>
    <string name="filtrarObjetosMenuUser">Filtrar objetos</string>
    <string name="filtrarNotasMenuUser">Filtrar notas</string>
    <string name="vaciarTodasLasNotasMenuUser">Vaciar todas las notas</string>
    <string name="actualizarNotaMenuUser">Actualizar nota</string>
    <string name="configuracionContrasenia">Configuración</string>
    <string name="acerdaDeItem">Acerca de</string>
    <string name="idNotaDetalleTXTUser">Id de la nota:</string>
    <string name="idNotaDetalleUser">Id nota</string>
    <string name="uidUsuarioDetalleTXTUser">Uid usuario</string>
    <string name="uidUsuarioDetalleUser">Uid usuario</string>
    <string name="correoUsuarioDetalleTXTUser">Correo usuario</string>
    <string name="correoUsuarioDetalleUser">Correo usuario</string>
    <string name="tituloDetalleTXTUser">Título</string>
    <string name="tituloDetalleUser">Título</string>
    <string name="descripcionDetalleTXTUser">Descripción</string>
    <string name="descripcionDetalleUser">Descripcion</string>
    <string name="fechaRegistroDetalleTXTUser">Fecha registro</string>
    <string name="fechaRegistroDetalleUser">Fecha registro</string>
    <string name="fechaNotaDetalleTXTUser">Fecha nota</string>
    <string name="fechaNotaDetalleUser">Fecha nota</string>
    <string name="estadoDetalleTXTUser">Estado</string>
    <string name="estadoDetalleUser">Estado</string>
    <string name="buttonImportanteUser">Importante</string>
    <string name="idNotaDetalleTXTAdmin">Id de la nota:</string>
    <string name="idNotaDetalleAdmin"> -- </string>
    <string name="uidUsuarioDetalleTXTAdmin">Uid usuario</string>
    <string name="uidUsuarioDetalleAdmin"> -- </string>
    <string name="correoUsuarioDetalleTXTAdmin">Correo usuario</string>
    <string name="correoUsuarioDetalleAdmin"> -- </string>
    <string name="tituloDetalleTXTAdmin">Título</string>
    <string name="tituloDetalleAdmin"> -- </string>
    <string name="descripcionDetalleTXTAdmin">Descripción</string>
    <string name="descripcionDetalleAdmin"> -- </string>
    <string name="fechaRegistroDetalleTXTAdmin">Fecha registro</string>
    <string name="fechaRegistroDetalleAdmin"> -- </string>
    <string name="fechaNotaDetalleTXTAdmin">Fecha nota</string>
    <string name="fechaNotaDetalleAdmin"> -- </string>
    <string name="estadoDetalleTXTAdmin">Estado</string>
    <string name="estadoDetalleAdmin"> -- </string>
    <string name="buttonImportanteAdmin">Importante</string>
    <string name="eliminarNotaImportanteTXTUser">¿Desea eliminar ésta nota importante de la lista?</string>
    <string name="eliminarNotaUser">Eliminar</string>
    <string name="eliminarNotaCancelarUser">Cancelar</string>
    <string name="eliminarNotaImportanteTXTAdmin">¿Desea eliminar ésta nota importante de la lista?</string>
    <string name="eliminarNotaAdmin">Eliminar</string>
    <string name="eliminarNotaCancelarAdmin">Cancelar</string>
    <string name="FiltroTXTuser">Filtrar notas: </string>
    <string name="todasNotasUser">Todas</string>
    <string name="notasFinalizadasUser">Finalizadas</string>
    <string name="notasNoFinalizadasUser">No Finalizadas</string>
    <string name="FiltroTXTAdmin">Filtrar notas: </string>
    <string name="todasNotasAdmin">Todas</string>
    <string name="notasFinalizadasAdmin">Finalizadas</string>
    <string name="notasNoFinalizadasAdmin">No Finalizadas</string>
    <string name="cuentaVerificada">Cuenta Verificada</string>
    <string name="entendidoVerificado">Entendido</string>
    <string name="desarrollador">Desarrollado por: Gerald Sandy Coral</string>
    <string name="correoSoporte">Soporte: geraldsandy@upeu.edu.pe</string>
    <string name="versionApp">Versión: 1.0</string>
    <string name="entendidoInfo">Entendido</string>
    <string name="uidPerfil">Uid</string>
    <string name="nombresPerfil">Mis nombres</string>
    <string name="apellidosPerfil">Mis apellidos</string>
    <string name="correoPerfil">Correo</string>
    <string name="edadPerfil">Edad</string>
    <string name="telefonoPerfil">Teléfono</string>
    <string name="domicilioPerfil">Domicilio</string>
    <string name="universidadPerfil">Universidad</string>
    <string name="cargoPerfil">Cargo</string>
    <string name="numeroDocumento">Número documento</string>
    <string name="tipoDocumento">Tipo documento</string>
    <string name="fechaNacimientoPerfil">Fecha de nacimiento</string>
    <string name="guardarDatos">Guardar Datos</string>
    <string name="uidPerfilUser">Uid</string>
    <string name="nombresPerfilUser">Mis nombres</string>
    <string name="apellidosPerfilUser">Mis apellidos</string>
    <string name="correoPerfilUser">Correo</string>
    <string name="edadPerfilUser">Edad</string>
    <string name="telefonoPerfilUser">Teléfono</string>
    <string name="domicilioPerfilUser">Domicilio</string>
    <string name="universidadPerfilUser">Universidad</string>
    <string name="facultadPerfilUser">Facultad</string>
    <string name="carreraPerfilUser">Carrera</string>
    <string name="numeroDocumentoUser">Número documento</string>
    <string name="tipoDocumentoUser">Tipo documento</string>
    <string name="fechaNacimientoPerfilUser">Fecha de nacimiento</string>
    <string name="guardarDatosUser">Guardar Datos</string>
    <string name="importanteTXTAuthUser">Lea con atención</string>
    <string name="mensajeTXTAuthUser">Para realizar la eliminación de su cuenta, tendrá que cerrar sesión, luego logearse, y en un lapzo de 5 minutos podrá eliminar su cuenta de nuestrá aplicación, una vez pasado ese tiempo, tendrá que realizar nuevamente los pasos mencionados</string>
    <string name="buttonEntendidoAuthUser">Entendido</string>
    <string name="importanteTXTAuthAdmin">Lea con atención</string>
    <string name="mensajeTXTAuthAdmin">Para realizar la eliminación de su cuenta, tendrá que cerrar sesión, luego logearse, y en un lapzo de 5 minutos podrá eliminar su cuenta de nuestrá aplicación, una vez pasado ese tiempo, tendrá que realizar nuevamente los pasos mencionados</string>
    <string name="buttonEntendidoAuthAdmin">Entendido</string>
    <string name="buttonCerarSesionAuthAdmin">Cerrar sesión</string>
    <string name="vaciarObjetosMenu">Eliminar todos los contactos</string>
    <string name="buscarObjetosMenu">Buscar Contactos</string>
    <string name="filtrarObjetos">Filtrar objetos</string>
    <string name="uidUsuarioAddNote">Uid del Usuario</string>
    <string name="correoUsuarioAddNote">Correo de usuario</string>
    <string name="fechaHoraActualTXTAddNote">Fecha de registro</string>
    <string name="fechaHoraActualAddNote">Fecha y Hora Actual</string>
    <string name="tituloAddNote">Título</string>
    <string name="descripcionAddNote">Descripción</string>
    <string name="btnCalendarioAddNote">Calendario</string>
    <string name="fechaAddNote">00/00/00</string>
    <string name="estadoAddNote">No finalizado</string>
    <string name="uidAdminAddNote">Uid del Usuario</string>
    <string name="correoAdminAddNote">Correo de usuario</string>
    <string name="fechaHoraActualAdminTXTAddNote">Fecha de registro</string>
    <string name="fechaHoraActualAdminAddNote">Fecha y Hora Actual</string>
    <string name="tituloAdminAddNote">Título</string>
    <string name="descripcionAdminAddNote">Descripción</string>
    <string name="btnCalendarioAdminAddNote">Calendario</string>
    <string name="fechaAdminAddNote">00/00/00</string>
    <string name="estadoAdminAddNote">No finalizado</string>
    <string name="idNotaUpdateAdmin">Id nota</string>
    <string name="uidNotaUpdateAdmin">Uid del Usuario</string>
    <string name="correoNotaUpdateAdmin">Correo de usuario</string>
    <string name="fechaRegistroNotaUpdateAdmin">Fecha de registro</string>
    <string name="tituloNotaUpdateAdmin">Título</string>
    <string name="descripcionNotaUpdateAdmin">Descripción</string>
    <string name="btnCalendarioNotaUpdateAdmin">Calendario</string>
    <string name="fechaPerdidaNotaUpdateAdmin">00/00/00</string>
    <string name="estadoNotaUpdateAdmin">No finalizado</string>
    <string name="estadoNuevoNotaUpdateAdmin"> -- </string>
    <string name="filtroTXT">Filtrar objetos: </string>
    <string name="todosLosObjetos">Todos</string>
    <string name="objetosPerdidos">Perdidos</string>
    <string name="objetosEcontrados">Econtrados</string>
    <string name="objetosEntregados">Entregados</string>
</resources>