<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_gravity="center">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_gravity="center"
        app:lottie_autoPlay="true"
        app:lottie_fileName="filtro.json"
        app:lottie_imageAssetsFolder="assets"
        app:lottie_loop="true" />

    <TextView
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/worksans"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filtroTXT"/>

    <Button
        android:id="@+id/todosLosObjetos"
        android:text="@string/todosLosObjetos"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/worksans"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/objetosPerdidos"
        android:text="@string/objetosPerdidos"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/worksans"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/objetosEcontrados"
        android:text="@string/objetosEcontrados"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/worksans"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/objetosEntregados"
        android:text="@string/objetosEntregados"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/worksans"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"/>


</androidx.appcompat.widget.LinearLayoutCompat>