<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/worksans"
        android:gravity="center"
        android:text="@string/importanteTXTAuthAdmin"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        app:lottie_autoPlay="true"
        app:lottie_fileName="autenticacion.json"
        app:lottie_imageAssetsFolder="assets"
        app:lottie_loop="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/worksans"
        android:gravity="center"
        android:text="@string/mensajeTXTAuthAdmin"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonEntendidoAuthAdmin"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/worksans"
        android:text="@string/buttonEntendidoAuthAdmin" />

    <Button
        android:id="@+id/buttonCerarSesionAuthAdmin"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/worksans"
        android:text="@string/buttonCerarSesionAuthAdmin" />

</androidx.appcompat.widget.LinearLayoutCompat>